# calc

calc.fs/: .gitignore  README.org  build.fsx  paket.dependencies
calc.fs/src/: Parser.fs  Program.fs  calc.fsproj
calc.hs/: LICENSE  README.org  calc.cabal
calc.hs/src/: Main.hs
calc.purs/: README.org  bower.json
calc.purs/src/: Env.purs  Eval.purs  Main.purs  Type.purs
calc.purs/src/Parser/: Calc.purs  Util.purs
calc.scala/: .gitignore  README.org  build.sbt
calc.scala/project/: Dependencies.scala
calc.scala/src/main/scala/io/github/zwild/: AST.scala  Env.scala  Eval.scala  Main.scala  Package.scala  Parser.scala  Parsing.scala
