name:                calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zwild/calc#readme
license:             BSD3
license-file:        LICENSE
author:              Zhao Wei
maintainer:          zwildfree@gmail.com
copyright:           Copyright: (c) 2017 Zhao Wei
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

executable calc
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , parsers
                     , trifecta >= 1.6.2.1
